@@ -36,7 +36,6 @@ latex_head = """\
 \\usepackage{color}
 \\usepackage{multirow}
 \\usepackage{ifthen}
-\\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 \\usepackage[DIV12]{typearea}
 % generated by Docutils <http://docutils.sourceforge.net/>
 \\newlength{\\admonitionwidth}
@@ -79,6 +78,9 @@ latex_head = """\
 \\newcommand{\\rubric}[1]{\\subsection*{~\\hfill {\\it #1} \\hfill ~}}
 \\newcommand{\\titlereference}[1]{\\textsl{#1}}
 % end of "some commands"
+\\ifthenelse{\\isundefined{\\hypersetup}}{
+\\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
+}{}
 """
 
 totest = {}
